Fixes vertical overflow issue.

--- a/src/app/styles/reset.scss
+++ b/src/app/styles/reset.scss
@@ -1,8 +1,16 @@
+html {
+    height: 100%;
+}
+
 body {
     margin: 0;
-    min-height: 100vh;
-    height: fill-available;
     font-family: 'Press Start 2P', monospace;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+
+    // height: fill-available;
+    // min-height: 100vh;
 
     // text-rendering: optimizeSpeed;
 }
